# agent-skills-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/: mcp_config.json
.gemini/: AGENTS.md
docker/ollama-model-management/: SKILL.md
frontend/prepare-pr/: SKILL.md
frontend/transform-glb-to-jsx/: SKILL.md
resources/docker/chromadb-management/: SKILL.md
resources/docker/docker-lifecycle/: SKILL.md
resources/frontend/nextjs-project-init/: SKILL.md
resources/langgraph/langgraph-project-init/: SKILL.md
resources/solidity/foundry-project-init/: SKILL.md
solidity/foundry-git-workflow/: SKILL.md
src/agent_skills_server/: __init__.py  indexer.py  server.py  skills.py
tests/: __init__.py  test_indexer.py  test_server.py
